--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,14 @@
                 <li class="text-base">Roadmap</li>
                 <li class="text-base">Tokenomics</li>
             </ul>
-            <div class="mr-16">
-                <button class="h-12 ml-4 bg-gray-500 px-6 py-3 text-base font-medium rounded text-white">
-                    Whitepaper
-                </button>
-                <button class="h-12 ml-4 px-6 py-3 styledbtn text-base font-medium rounded text-white">
-                    Get Started
-                </button>
-            </div>
+            <div class="flex-grow"></div>
+            <button class="h-12 ml-4 bg-gray-500 px-6 py-3 text-base font-medium rounded text-white">
+                Whitepaper
+            </button>
+            <button class="h-12 mr-16 ml-4 px-6 py-3 styledbtn text-base font-medium rounded text-white">
+                Get Started
+            </button>
+
         </nav>
     </header>
 
@@ -65,61 +65,62 @@
         <!-- Homepage images -->
         <div class="flex opacity-70">
             <div class="absolute right-1/4 scroll-up-fast">
-                <img src="/images/Picture (2).png" alt="" />
-                <img src="/images/Picture (1).png" alt="" />
-                <img src="/images/Picture (4).png" alt="" />
+                <img src="images/Picture (2).png" alt="" />
+                <img src="images/Picture (1).png" alt="" />
+                <img src="images/Picture (4).png" alt="" />
             </div>
             <div class="absolute right-40 top-3">
-                <img src="/images/Picture (8).png" alt="" />
-                <img src="/images/Picture (11).png" alt="" />
-                <img src="/images/Picture (13).png" alt="" />
+                <img src="images/Picture (8).png" alt="" />
+                <img src="images/Picture (11).png" alt="" />
+                <img src="images/Picture (13).png" alt="" />
             </div>
             <div class="absolute right-0 scroll-up-fast">
-                <img src="/images/Picture (12).png" alt="" />
-                <img src="/images/Picture (9).png" alt="" />
-                <img src="/images/Picture (14).png" alt="" />
+                <img src="images/Picture (12).png" alt="" />
+                <img src="images/Picture (9).png" alt="" />
+                <img src="images/Picture (14).png" alt="" />
             </div>
         </div>
     </section>
 
     <!-- SECTION 2 - TEXT-ON-IMAGE -->
-    <section class="text-on-img w-3/4 mx-auto mt-60 purple-bg flex justify-center items-center flex-col h-screen relative">
+    <section
+        class="text-on-img w-3/4 mx-auto mt-60 purple-bg flex justify-center items-center flex-col h-screen relative">
         <!-- image Container -->
         <div class="flex relative align-center">
             <div class="image-container">
-                <img src="/images/1-Picture.png" alt="" />
-                <img src="/images/1-Picture-1.png" alt="" />
-                <img src="/images/1-Picture-2.png" alt="" />
+                <img src="images/1-Picture.png" alt="" />
+                <img src="images/1-Picture-1.png" alt="" />
+                <img src="images/1-Picture-2.png" alt="" />
             </div>
             <div class="image-container">
-                <img src="/images/2-Picture.png" alt="" />
-                <img src="/images/2-Picture-1.png" alt="" />
-                <img src="/images/2-Picture-2.png" alt="" />
+                <img src="images/2-Picture.png" alt="" />
+                <img src="images/2-Picture-1.png" alt="" />
+                <img src="images/2-Picture-2.png" alt="" />
             </div>
             <div class="image-container">
-                <img src="/images/3-Picture.png" alt="" />
-                <img src="/images/3-Picture-1.png" alt="" />
-                <img src="/images/3-Picture-2.png" alt="" />
+                <img src="images/3-Picture.png" alt="" />
+                <img src="images/3-Picture-1.png" alt="" />
+                <img src="images/3-Picture-2.png" alt="" />
             </div>
             <div class="image-container">
-                <img src="/images/4-Picture.png" alt="" />
-                <img src="/images/4-Picture-1.png" alt="" />
-                <img src="/images/4-Picture-2.png" alt="" />
+                <img src="images/4-Picture.png" alt="" />
+                <img src="images/4-Picture-1.png" alt="" />
+                <img src="images/4-Picture-2.png" alt="" />
             </div>
             <div class="image-container">
-                <img src="/images/5-Picture.png" alt="" />
-                <img src="/images/5-Picture-1.png" alt="" />
-                <img src="/images/5-Picture-2.png" alt="" />
+                <img src="images/5-Picture.png" alt="" />
+                <img src="images/5-Picture-1.png" alt="" />
+                <img src="images/5-Picture-2.png" alt="" />
             </div>
             <div class="image-container">
-                <img src="/images/6-Picture.png" alt="" />
-                <img src="/images/6-Picture-1.png" alt="" />
-                <img src="/images/6-Picture-2.png" alt="" />
+                <img src="images/6-Picture.png" alt="" />
+                <img src="images/6-Picture-1.png" alt="" />
+                <img src="images/6-Picture-2.png" alt="" />
             </div>
             <div class="image-container">
-                <img src="/images/7-Picture.png" alt="" />
-                <img src="/images/7-Picture-1.png" alt="" />
-                <img src="/images/7-Picture-2.png" alt="" />
+                <img src="images/7-Picture.png" alt="" />
+                <img src="images/7-Picture-1.png" alt="" />
+                <img src="images/7-Picture-2.png" alt="" />
             </div>
         </div>
 
@@ -133,8 +134,8 @@
     </section>
 
     <!-- SECTION 3- AVATAR -->
-    <section class="avatar flex gap-x-8 items-center">
-        <img src="/images/avatar.png">
+    <section class="avatar flex gap-x-8 items-center  py-20 mb-95">
+        <img src="images/avatar.png">
         <div class="text-center">
             <h1>How it works</h1>
             <h2>Select an Avatar</h2>
@@ -143,7 +144,106 @@
             <h2>Publish</h2>
         </div>
     </section>
-    
+
+
+
+
+    <!-- SECTION 4- SLIDER -->
+    <section class="relative slider mb-20">
+        <img class="absolute inset-2/4 top-0 " src="images/Core.png" alt="">
+
+        <div class=" flex  left-to-right text-3xl pt-10 gap-x-6 w-max flex-nowrap">
+            <p class="px-4 py-3 gradient-bg-1 max-w-fit rounded-lg">Outfits</p>
+            <p class="px-4 py-3 gradient-bg-1 max-w-fit rounded-lg">Avatar</p>
+            <p class="px-4 py-3 gradient-bg-2 max-w-fit rounded-lg">Technology</p>
+            <p class="px-4 py-3 gradient-bg-3 max-w-fit rounded-lg">Design</p>
+            <p class="px-4 py-3 gradient-bg-8 max-w-fit rounded-lg">Artificial Intelligence</p>
+            <p class="px-4 py-3 gradient-bg-5 max-w-fit rounded-lg">AI Chat Bot</p>
+            <p class="px-4 py-3 gradient-bg-6 max-w-fit rounded-lg">Customizable</p>
+            <p class="px-4 py-3 gradient-bg-7 max-w-fit rounded-lg">3D Model</p>
+
+
+        </div>
+
+        <img class="absolute  top-15 left-1/4" src="images/video player.png" alt="">
+        <img class=" absolute top-15 inset-3/4" src="images/Mic.png" alt="">
+
+        <div class="right-to-left flex text-3xl pt-10 gap-x-6 absolute top-20 right-5 w-max flex-nowrap">
+            <p class="px-4 pb-2 pt-3 gradient-bg-1 max-w-fit rounded-lg">Artificial Intelligence</p>
+            <p class="px-4 pb-2 pt-3 gradient-bg-1 max-w-fit rounded-lg">People</p>
+            <p class="px-4 pb-2 pt-3 gradient-bg-2 max-w-fit rounded-lg">Create Videos</p>
+            <p class="px-4 pb-2 pt-3 gradient-bg-3 max-w-fit rounded-lg">Analyze</p>
+            <p class="px-4 pb-2 pt-3 gradient-bg-2 max-w-fit rounded-lg">Outfits</p>
+            <p class="px-4 pb-2 pt-3 gradient-bg-5 max-w-fit rounded-lg">3d Model</p>
+            <p class="px-4 pb-2 pt-3 gradient-bg-6 max-w-fit rounded-lg">Voice Chat</p>
+            <p class="px-4 pb-2 pt-3 gradient-bg-7 max-w-fit rounded-lg">Marketing</p>
+            <p class="px-4 pb-2 pt-3 gradient-bg-5 max-w-fit rounded-lg">Realistic</p>
+
+        </div>
+    </section>
+
+
+
+
+    <!-- SECTION 5- IMAGE GRID -->
+    <section class="image-grid my-152 ">
+
+        <!-- FIRST ROW -->
+        <div class="py-24 px-16 flex gap-x-8">
+
+            <div class="small-container relative px-8  rounded pt-8">
+                <div class="pb-32">
+
+                    <p>AI</p>
+                    <p>OUTFITS</p>
+                </div>
+                <div class="rectangle"></div>
+                <img class="red-shoe absolute top-48 inset-0" src="images/Red Shoe.png">
+
+            </div>
+
+            <div class="large-container relative  rounded pt-8 w-full">
+                <div class="pb-32">
+
+                    <p>Realistic AI</p>
+                    <p>Avatar</p>
+                </div>
+                <div class=""></div>
+                <img class=" absolute top-28 inset-0 w-full" src="images/image.png">
+
+            </div>
+        </div>
+
+        <!-- SECOND ROW -->
+        <div class="py-24 px-16 flex gap-x-8">
+
+            <div class="large-container relative  rounded pt-8 w-full">
+                <div class="pb-12">
+
+                    <p>Generate or Write your </p>
+                    <p>Script</p>
+                </div>
+
+                <div class=" flex items-center justify-center text-center">
+                    <img class="max-w-fit " src="images/key.png" alt="Key Image">
+                </div>
+            </div>
+
+            <div class="small-container relative px-8  rounded pt-8">
+                <div class="pb-12">
+
+                    <p>AI</p>
+                    <p>OUTFITS</p>
+                </div>
+                <div class=" flex items-center justify-center text-center"></div>
+                <img class="" src="https://s3-alpha-sig.figma.com/img/6b6e/5845/790cd01488d88622c666c11af82f87f3?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=f1ici-nWG3bBJAWOBNAilCZx1WEPeyRTXHe3EFNCTG8ZZjq~k6fE6E2RBEdzCqDT4CfuADJPgIznamIGmX2HrD89zX4jvIT91kud8HawKqOago7zXMqMnHnsvpWD4-wdbsd4RrbjnNXq8jmBxPZWGaAlCFG0FoRHduWnVhzy5JFz~uUkPbReRM8y~enckGJ0aFq8oZjCPUaWXOND-9cJ8xh4PvDDtbLDjOpEyriQswwU0g1zGBrUwb6Gjby~L4iqGByDWAuJaPiT0axs8rZzmFiOJrlZoMOCw2u~iA-fp-56zPv0NHRzdNZR4YKP6eYKzbbnATiGZEU9wCXVSkjY6A__">
+
+            </div>
+        </div>
+    </section>
+
+
+
 </body>
 
 </html>
