Tokenomics page added

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,15 @@
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <link href="output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="outfit relative">
+<body class="outfit relative mx-auto text-center">
     <!-- Navbar -->
     <header
         class="bg-black bg-opacity-20 border-b border-neutral-800 flex justify-between items-center py-4 right-56 absolute z-10 bg-dark-200 outfit sticky top-0">
@@ -236,12 +239,83 @@
                     <p>OUTFITS</p>
                 </div>
                 <div class=" flex items-center justify-center text-center"></div>
-                <img class="" src="https://s3-alpha-sig.figma.com/img/6b6e/5845/790cd01488d88622c666c11af82f87f3?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=f1ici-nWG3bBJAWOBNAilCZx1WEPeyRTXHe3EFNCTG8ZZjq~k6fE6E2RBEdzCqDT4CfuADJPgIznamIGmX2HrD89zX4jvIT91kud8HawKqOago7zXMqMnHnsvpWD4-wdbsd4RrbjnNXq8jmBxPZWGaAlCFG0FoRHduWnVhzy5JFz~uUkPbReRM8y~enckGJ0aFq8oZjCPUaWXOND-9cJ8xh4PvDDtbLDjOpEyriQswwU0g1zGBrUwb6Gjby~L4iqGByDWAuJaPiT0axs8rZzmFiOJrlZoMOCw2u~iA-fp-56zPv0NHRzdNZR4YKP6eYKzbbnATiGZEU9wCXVSkjY6A__">
+                <img class=""
+                    src="https://s3-alpha-sig.figma.com/img/6b6e/5845/790cd01488d88622c666c11af82f87f3?Expires=1718582400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=f1ici-nWG3bBJAWOBNAilCZx1WEPeyRTXHe3EFNCTG8ZZjq~k6fE6E2RBEdzCqDT4CfuADJPgIznamIGmX2HrD89zX4jvIT91kud8HawKqOago7zXMqMnHnsvpWD4-wdbsd4RrbjnNXq8jmBxPZWGaAlCFG0FoRHduWnVhzy5JFz~uUkPbReRM8y~enckGJ0aFq8oZjCPUaWXOND-9cJ8xh4PvDDtbLDjOpEyriQswwU0g1zGBrUwb6Gjby~L4iqGByDWAuJaPiT0axs8rZzmFiOJrlZoMOCw2u~iA-fp-56zPv0NHRzdNZR4YKP6eYKzbbnATiGZEU9wCXVSkjY6A__">
 
             </div>
         </div>
     </section>
 
+
+    <!-- SECTION 6 -Tokenomics -->
+    <section class=" tokenomics">
+        <h1 class="leading-16 font-normal text-5xl mb-20">Tokenomics</h1>
+        <div class="text-2xl flex justify-evenly align-center">
+
+            <table class=" text-left table-auto md:table-fixed">
+                <tr class="">
+                    <td width="200px" class="px-6 py-6  leading-4 font-semibold">Name</td>
+                    <td class="font-normal leading-6	px-6 py-6 ">: AI GEN</td>
+                </tr>
+                <tr class="">
+
+                    <td class="px-6 py-6  leading-4 	font-semibold">Total Supply</td>
+                    <td class="font-normal leading-6	px-6 py-6 ">: 1B</td>
+                </tr>
+                <tr class="">
+
+                    <td class="px-6 py-6  leading-4 	font-semibold">Contract</td>
+                    <td class="font-normal leading-6	px-6 py-6 ">: Lorem ipsum dolor sit a...</td>
+                </tr>
+            </table>
+            <table class=" text-left table-auto md:table-fixed">
+                <tr class="">
+                    <td width="200px" class="px-6 py-6  leading-4 font-semibold">Token Name</td>
+                    <td class="font-normal leading-6	px-6 py-6 ">: $AIGEN</td>
+                </tr>
+                <tr class="">
+
+                    <td class="px-6 py-6  leading-4 	font-semibold">Circulating Supply</td>
+                    <td class="font-normal leading-6	px-6 py-6 ">: 1B</td>
+                </tr>
+                <tr class="">
+
+                    <td class="px-6 py-6  leading-4 	font-semibold">Chain</td>
+                    <td class="font-normal leading-6	px-6 py-6 ">: Ethereum</td>
+                </tr>
+            </table>
+
+        </div>
+        <div class="flex  ml-52 mt-16  center-content  items-center">
+            <img src="images/Donut.png">
+            <div>
+                <div class="w-6  border-t rounded border-l border-b bg-red-700  h-16 mb-3">
+                    <div class="flex justify-between rounded pl-8 w-80 border-b border-t border-r  p-4	h-16 ">
+                        <p class="inter">Partnership</p>
+                        <p>: 5% tokens</p>
+                    </div>
+                </div>
+                <div class="w-6 rounded  border-t border-l border-b  bg-orange-500 h-16 mb-3">
+                    <div class="flex justify-between rounded pl-8 w-80 border-b border-t border-r  p-4	h-16 ">
+                        <p class="inter">LP Pool</p>
+                        <p>: 5% tokens</p>
+                    </div>
+                </div>
+                <div class="w-6 rounded border-t border-l border-b  bg-purple-700 h-16 mb-3">
+                    <div class="flex justify-between rounded pl-8 w-80 border-b border-t border-r  p-4	h-16 ">
+                        <p class="inter">Burned</p>
+                        <p>: 5% tokens</p>
+                    </div>
+                </div>
+                <div class="w-6 rounded  border-t border-l border-b  bg-blue-400 h-16 mb-3">
+                    <div class="flex justify-between rounded pl-8 w-80 border-b border-t border-r  p-4	h-16 ">
+                        <p class="inter">BNB LP Pool</p>
+                        <p>: 5% tokens</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </body>
