--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <link href="output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -195,13 +195,15 @@
         <div class="py-24 px-16 flex gap-x-8">
 
             <div class="small-container relative px-8  rounded pt-8">
-                <div class="pb-32">
+                <div class="pb-48">
 
                     <p>AI</p>
                     <p>OUTFITS</p>
                 </div>
-                <div class="rectangle"></div>
-                <img class="red-shoe absolute top-48 inset-0" src="images/Red Shoe.png">
+                <div class="rectangle">
+
+                    <img class="red-shoe absolute" src="images/Red Shoe.png">
+                </div>
 
             </div>
 
@@ -286,9 +288,12 @@
             </table>
 
         </div>
-        <div class="flex  ml-52 mt-16  center-content  items-center">
+
+
+        <!-- DONUT -->
+        <div class="flex  ml-52 mt-12  center-content  items-center">
             <img src="images/Donut.png">
-            <div>
+            <div class="ml-6">
                 <div class="w-6  border-t rounded border-l border-b bg-red-700  h-16 mb-3">
                     <div class="flex justify-between rounded pl-8 w-80 border-b border-t border-r  p-4	h-16 ">
                         <p class="inter">Partnership</p>
@@ -318,6 +323,31 @@
     </section>
 
 
+
+
+
+    <!-- SECTION 7   ROADMAP -->
+    <section class="roadmap my-152">
+        <h1 class="leading-16 font-normal text-5xl mb-20">Roadmap</h1>
+        <div class="flex justify-around items-center">
+            <div class="text-left h-min">
+                <h1 class="styledText outfit font-medium text-5xl">PHASE1</h1>
+                <ul class="outfit text-xl font-normal leading-8 mt-4">
+
+                    <li>Horizen dai dai harmony dogecoin waves nexo.</li>
+                    <li>Flow horizen waves dash tether zcash waves dash terraUSD.</li>
+                    <li>Quant harmony amp cosmos PancakeSwap decentraland decred.</li>
+                    <li>Serum TRON solana tether holo crypto. Flow eCash amp EOS digibyte stellar.</li>
+                </ul>
+            </div>
+            <img src="images/Phase1.png">
+        </div>
+    </section>
 </body>
 
 </html>
+<!-- font-family: Outfit;
+font-size: 48px;
+font-weight: 500;
+line-height: 64px;
+text-align: left; -->
