--- a/src/index.html
+++ b/src/index.html
@@ -329,9 +329,11 @@
     <!-- SECTION 7   ROADMAP -->
     <section class="roadmap my-152">
         <h1 class="leading-16 font-normal text-5xl mb-20">Roadmap</h1>
+
+        <!-- phase 1 -->
         <div class="flex justify-around items-center">
             <div class="text-left h-min">
-                <h1 class="styledText outfit font-medium text-5xl">PHASE1</h1>
+                <h1 class="phase1 outfit font-medium text-5xl">PHASE 1</h1>
                 <ul class="outfit text-xl font-normal leading-8 mt-4">
 
                     <li>Horizen dai dai harmony dogecoin waves nexo.</li>
@@ -341,6 +343,37 @@
                 </ul>
             </div>
             <img src="images/Phase1.png">
+        </div>
+
+
+
+        <!-- phase 2 -->
+        <div class="flex justify-around items-center mt-24">
+            <div class="text-left h-min">
+                <h1 class="phase2 outfit font-medium text-5xl">PHASE 2</h1>
+                <ul class="outfit text-xl font-normal leading-8 mt-4">
+                    <li>BitTorrent dai dogecoin crypto nexo nexo cosmos tezos ox PancakeSwap. </li>
+                    <li>Tether ethereum helium eCash IOTA. Litecoin enjin shiba-inu dash audius monero. </li>
+                    <li>Aave PancakeSwap loopring horizen neo uniswap avalanche litecoin celsius TRON. </li>
+                    <li>Hive stellar velas flow cardano.</li>
+                </ul>
+            </div>
+            <img src="images/phase2.png">
+        </div>
+
+
+
+        <!-- phase 3 -->
+        <div class="flex justify-around items-center mt-24">
+            <div class="text-left h-min">
+                <h1 class="phase3 outfit font-medium text-5xl">PHASE 3</h1>
+                <ul class="outfit text-xl font-normal leading-8 mt-4">
+                    <li>Revain audius bitcoin revain PancakeSwap elrond ipsum ethereum. </li>
+                    <li>Waves TRON dogecoin bancor eCash quant secret. </li>
+                    <li>Celsius crypto bancor nexo litecoin decentraland crypto.</li>
+                </ul>
+            </div>
+            <img src="images/phase3.png">
         </div>
     </section>
 </body>
