--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,14 @@
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <link href="output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body class="outfit relative mx-auto text-center">
@@ -155,7 +157,7 @@
     <section class="relative slider mb-20">
         <img class="absolute inset-2/4 top-0 " src="images/Core.png" alt="">
 
-        <div class=" flex  left-to-right text-3xl pt-10 gap-x-6 w-max flex-nowrap">
+        <div class=" flex  left-to-right text-3xl pt-10 gap-x-6 w-max flex-wrap">
             <p class="px-4 py-3 gradient-bg-1 max-w-fit rounded-lg">Outfits</p>
             <p class="px-4 py-3 gradient-bg-1 max-w-fit rounded-lg">Avatar</p>
             <p class="px-4 py-3 gradient-bg-2 max-w-fit rounded-lg">Technology</p>
@@ -171,7 +173,7 @@
         <img class="absolute  top-15 left-1/4" src="images/video player.png" alt="">
         <img class=" absolute top-15 inset-3/4" src="images/Mic.png" alt="">
 
-        <div class="right-to-left flex text-3xl pt-10 gap-x-6 absolute top-20 right-5 w-max flex-nowrap">
+        <div class="right-to-left flex text-3xl pt-10 gap-x-6 absolute top-20 right-5 w-max flex-wrap">
             <p class="px-4 pb-2 pt-3 gradient-bg-1 max-w-fit rounded-lg">Artificial Intelligence</p>
             <p class="px-4 pb-2 pt-3 gradient-bg-1 max-w-fit rounded-lg">People</p>
             <p class="px-4 pb-2 pt-3 gradient-bg-2 max-w-fit rounded-lg">Create Videos</p>
@@ -329,10 +331,13 @@
     <!-- SECTION 7   ROADMAP -->
     <section class="roadmap my-152">
         <h1 class="leading-16 font-normal text-5xl mb-20">Roadmap</h1>
+    </section>
 
-        <!-- phase 1 -->
+    <!-- phase 1 -->
+    <div class="roadmap-container">
+
         <div class="flex justify-around items-center">
-            <div class="text-left h-min">
+            <div class="text-left h-min ">
                 <h1 class="phase1 outfit font-medium text-5xl">PHASE 1</h1>
                 <ul class="outfit text-xl font-normal leading-8 mt-4">
 
@@ -346,41 +351,128 @@
         </div>
 
 
-
         <!-- phase 2 -->
-        <div class="flex justify-around items-center mt-24">
-            <div class="text-left h-min">
-                <h1 class="phase2 outfit font-medium text-5xl">PHASE 2</h1>
-                <ul class="outfit text-xl font-normal leading-8 mt-4">
-                    <li>BitTorrent dai dogecoin crypto nexo nexo cosmos tezos ox PancakeSwap. </li>
-                    <li>Tether ethereum helium eCash IOTA. Litecoin enjin shiba-inu dash audius monero. </li>
-                    <li>Aave PancakeSwap loopring horizen neo uniswap avalanche litecoin celsius TRON. </li>
-                    <li>Hive stellar velas flow cardano.</li>
-                </ul>
+
+
+
+        <div class="phase3-container ">
+            <div class="flex justify-around items-center mt-24">
+                <div class="text-left h-min">
+                    <h1 class="phase2 outfit font-medium text-5xl">PHASE 2</h1>
+                    <ul class="outfit text-xl font-normal leading-8 mt-4">
+                        <li>BitTorrent dai dogecoin crypto nexo nexo cosmos tezos ox PancakeSwap. </li>
+                        <li>Tether ethereum helium eCash IOTA. Litecoin enjin shiba-inu dash audius monero. </li>
+                        <li>Aave PancakeSwap loopring horizen neo uniswap avalanche litecoin celsius TRON. </li>
+                        <li>Hive stellar velas flow cardano.</li>
+                    </ul>
+                </div>
+                <img src="images/phase2.png">
             </div>
-            <img src="images/phase2.png">
+
+
+
+            <!-- phase 3 -->
+            <div class=" flex justify-around items-center mt-24">
+                <div class="text-left h-min">
+                    <h1 class="phase3 outfit font-medium text-5xl">PHASE 3</h1>
+                    <ul class="outfit text-xl font-normal leading-8 mt-4">
+                        <li>Revain audius bitcoin revain PancakeSwap elrond ipsum ethereum. </li>
+                        <li>Waves TRON dogecoin bancor eCash quant secret. </li>
+                        <li>Celsius crypto bancor nexo litecoin decentraland crypto.</li>
+                    </ul>
+                </div>
+                <img src="images/phase3.png">
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <!-- SECTION 8  -->
+    <section class="text-on-img  mt-152 w-3/4 mx-auto   flex justify-center items-center flex-col  relative">
+
+        <div class="relative purple-bg">
+
+
+            <div class="flex  align-center justify-center">
+                <div class="image-container">
+                    <img src="images/1-Picture.png" alt="" />
+                    <img src="images/1-Picture-1.png" alt="" />
+                    <!-- <img src="images/1-Picture-2.png" alt="" /> -->
+                </div>
+                <div class="image-container">
+                    <img src="images/2-Picture.png" alt="" />
+                    <img src="images/2-Picture-1.png" alt="" />
+                    <!-- <img src="images/2-Picture-2.png" alt="" /> -->
+                </div>
+                <div class="image-container">
+                    <img src="images/3-Picture.png" alt="" />
+                    <img src="images/3-Picture-1.png" alt="" />
+                    <!-- <img src="images/3-Picture-2.png" alt="" /> -->
+                </div>
+                <div class="image-container">
+                    <img src="images/4-Picture.png" alt="" />
+                    <img src="images/4-Picture-1.png" alt="" />
+                    <!-- <img src="images/4-Picture-2.png" alt="" /> -->
+                </div>
+                <div class="image-container">
+                    <img src="images/5-Picture.png" alt="" />
+                    <img src="images/5-Picture-1.png" alt="" />
+                    <!-- <img src="images/5-Picture-2.png" alt="" /> -->
+                </div>
+                <div class="image-container">
+                    <img src="images/6-Picture.png" alt="" />
+                    <img src="images/6-Picture-1.png" alt="" />
+                    <!-- <img src="images/6-Picture-2.png" alt="" /> -->
+                </div>
+                <div class="image-container">
+                    <img src="images/7-Picture.png" alt="" />
+                    <img src="images/7-Picture-1.png" alt="" />
+                    <!-- <img src="images/7-Picture-2.png" alt="" /> -->
+                </div>
+            </div>
         </div>
 
 
+        <div class="absolute w-11/12 flex justify-between items-center text-center bg-getstarted ">
 
-        <!-- phase 3 -->
-        <div class="flex justify-around items-center mt-24">
-            <div class="text-left h-min">
-                <h1 class="phase3 outfit font-medium text-5xl">PHASE 3</h1>
-                <ul class="outfit text-xl font-normal leading-8 mt-4">
-                    <li>Revain audius bitcoin revain PancakeSwap elrond ipsum ethereum. </li>
-                    <li>Waves TRON dogecoin bancor eCash quant secret. </li>
-                    <li>Celsius crypto bancor nexo litecoin decentraland crypto.</li>
-                </ul>
-            </div>
-            <img src="images/phase3.png">
+            <h1 class="text-white">
+                Get Started
+            </h1>
+            <h1> <span class="material-symbols-outlined text-white">
+                    arrow_forward
+                </span></h1>
         </div>
     </section>
+    <div class="footer-container">
+        <div class="p-152 flex justify-around text-left">
+            <h1 class="text-3xl">Dash dash terraUSD neo uniswap <br> kadena helium avalanche polymath<br> bancor.</h1>
+            <div>
+                <input type="email" class="px-6 py-5 text-2xl	 border rounded bg-transparent"
+                    placeholder="Enter your Email">
+                <button type="submit" class="px-9 py-5  styledbtn text-2xl rounded text-white">Submit</button>
+            </div>
+        </div>
+
+        <div class=" px-16 pt-8 pb-16 flex justify-between items-center p-169 border-t">
+            <p class="ml-16 mr-12 aigen text-xl font-medium text-light">AI.GEN</p>
+            <div class="flex justify-around gap-x-12">
+                <img src="images/Vector (3).png">
+                <img src="images/Vector (4).png" alt="">
+                <img src="images/Vector (5).png" alt="">
+                <img src="images/Img - YouTube logo → SVG.png" alt="">
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
-<!-- font-family: Outfit;
-font-size: 48px;
-font-weight: 500;
-line-height: 64px;
-text-align: left; -->
