--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,12 @@
     <!-- Navbar -->
     <header
         class="bg-black bg-opacity-20 border-b border-neutral-800 flex justify-between items-center py-4 right-56 absolute z-10 bg-dark-200 outfit sticky top-0">
-        <p class="ml-16 mr-12 aigen text-xl font-medium text-light">AI.GEN</p>
+        <a href="#" class="ml-16 mr-12 aigen text-xl font-medium text-light">AI.GEN</a>
         <nav class="flex justify-between items-center flex-grow">
             <ul class="flex gap-x-8">
-                <li class="text-base">Features</li>
-                <li class="text-base">Roadmap</li>
-                <li class="text-base">Tokenomics</li>
+                <a href="#features" class="text-base">Features</a>
+                <a href="#roadmap" class="text-base">Roadmap</a>
+                <a href="#tokenomics" class="text-base">Tokenomics</a>
             </ul>
             <div class="flex-grow"></div>
             <button class="h-12 ml-4 bg-gray-500 px-6 py-3 text-base font-medium rounded text-white">
@@ -139,7 +139,7 @@
     </section>
 
     <!-- SECTION 3- AVATAR -->
-    <section class="avatar flex gap-x-8 items-center  py-20 mb-95">
+    <section id="features"  class="avatar flex gap-x-8 items-center  py-20 mb-95">
         <img src="images/avatar.png">
         <div class="text-center">
             <h1>How it works</h1>
@@ -252,7 +252,7 @@
 
 
     <!-- SECTION 6 -Tokenomics -->
-    <section class=" tokenomics">
+    <section class=" tokenomics"  id="tokenomics">
         <h1 class="leading-16 font-normal text-5xl mb-20">Tokenomics</h1>
         <div class="text-2xl flex justify-evenly align-center">
 
@@ -329,7 +329,7 @@
 
 
     <!-- SECTION 7   ROADMAP -->
-    <section class="roadmap my-152">
+    <section   id="roadmap"  class="roadmap my-152">
         <h1 class="leading-16 font-normal text-5xl mb-20">Roadmap</h1>
     </section>
 
@@ -461,7 +461,7 @@
             </div>
         </div>
 
-        <div class=" px-16 pt-8 pb-16 flex justify-between items-center p-169 border-t">
+        <div class=" px-16 pt-8 pb-16 flex justify-between items-center p-169 border-t border-neutral-800">
             <p class="ml-16 mr-12 aigen text-xl font-medium text-light">AI.GEN</p>
             <div class="flex justify-around gap-x-12">
                 <img src="images/Vector (3).png">
